force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Rev_Timein_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Rev_Timein_UTC__c</fullName>
    <label>Credible Rev Timein UTC</label>
    <type>DateTime</type>
</CustomField>