force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Reviewer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Credible_Reviewer_Comment__c</fullName>
    <label>Credible Reviewer Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>