force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Signature_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Credible_Signature_Cnt__c</fullName>
    <label>Credible Signature Cnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>