force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Signature_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Credible_Signature_Datetime__c</fullName>
    <label>Credible Signature Datetime</label>
    <type>DateTime</type>
</CustomField>