force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Signature_Datetime_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Signature_Datetime_UTC__c</fullName>
    <label>Credible Signature Datetime UTC</label>
    <type>DateTime</type>
</CustomField>