force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Source__c.field-meta.xml
<CustomField>
    <fullName>Credible_Source__c</fullName>
    <label>Credible Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>