force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Splitsecondary_Clientvisit_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Splitsecondary_Clientvisit_Id__c</fullName>
    <label>Credible Splitsecondary Clientvisit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>