force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Status__c.field-meta.xml
<CustomField>
    <fullName>Credible_Status__c</fullName>
    <label>Credible Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>