force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Subtract_Overlapping__c.field-meta.xml
<CustomField>
    <fullName>Credible_Subtract_Overlapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Subtract Overlapping</label>
    <type>Checkbox</type>
</CustomField>