force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credible_Summary_Notes__c</fullName>
    <label>Credible Summary Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>