force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Credible_Text_1__c</fullName>
    <label>Credible Text 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>