force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Timeframes__c.field-meta.xml
<CustomField>
    <fullName>Credible_Timeframes__c</fullName>
    <label>Credible Timeframes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>