force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Timein_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Timein_UTC__c</fullName>
    <label>Credible Timein UTC</label>
    <type>DateTime</type>
</CustomField>