force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Credible_Timeout__c</fullName>
    <label>Credible Timeout</label>
    <type>DateTime</type>
</CustomField>