force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Timeout_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Timeout_UTC__c</fullName>
    <label>Credible Timeout UTC</label>
    <type>DateTime</type>
</CustomField>