force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Title__c.field-meta.xml
<CustomField>
    <fullName>Credible_Title__c</fullName>
    <label>Credible Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>