force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Transfer_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Transfer_Date_UTC__c</fullName>
    <label>Credible Transfer Date UTC</label>
    <type>DateTime</type>
</CustomField>