force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Credible_Unit_Price__c</fullName>
    <label>Credible Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>