force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Unit_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Credible_Unit_Qualifier__c</fullName>
    <label>Credible Unit Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>