force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Unit_Timein__c.field-meta.xml
<CustomField>
    <fullName>Credible_Unit_Timein__c</fullName>
    <label>Credible Unit Timein</label>
    <type>DateTime</type>
</CustomField>