force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Unit_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Credible_Unit_Timeout__c</fullName>
    <label>Credible Unit Timeout</label>
    <type>DateTime</type>
</CustomField>