force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Units_Of_Svc__c.field-meta.xml
<CustomField>
    <fullName>Credible_Units_Of_Svc__c</fullName>
    <label>Credible Units Of Svc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>