force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Unscheduled__c.field-meta.xml
<CustomField>
    <fullName>Credible_Unscheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Unscheduled</label>
    <type>Checkbox</type>
</CustomField>