force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Visit_Dateday__c.field-meta.xml
<CustomField>
    <fullName>Credible_Visit_Dateday__c</fullName>
    <label>Credible Visit Dateday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>