force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Visitguid__c.field-meta.xml
<CustomField>
    <fullName>Credible_Visitguid__c</fullName>
    <label>Credible Visitguid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>