force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Visittype__c.field-meta.xml
<CustomField>
    <fullName>Credible_Visittype__c</fullName>
    <label>Credible Visittype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>