force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Visittype_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Visittype_Id__c</fullName>
    <label>Credible Visittype Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>