force-app/main/default/objects/pstar__Appointment__c/fields/pstar__Employee__c.field-meta.xml
<CustomField>
    <fullName>pstar__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>pstar__Employee_Profile__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Employee_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>