force-app/main/default/objects/pstar__Appointment__c/fields/pstar__Patient__c.field-meta.xml
<CustomField>
    <fullName>pstar__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>pstar__Patient_Admission__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>